@@ -20,11 +20,9 @@ ADD_DEFINITIONS("-DOBDLOGGER_MAJOR_VERSION=${OBDLOGGER_MAJOR_VERSION}")
 ADD_DEFINITIONS("-DOBDLOGGER_MINOR_VERSION=${OBDLOGGER_MINOR_VERSION}")
 
 # This is the default serial port on my mac for my OBD Key
-SET(OBDLOGGER_DEFAULT_SERIALPORT "/dev/cu.OBDKeyPro-DevB-1" CACHE STRING "Default serial port filename")
-ADD_DEFINITIONS(-DDEFAULT_SERIAL_PORT="\\"${OBDLOGGER_DEFAULT_SERIALPORT}"\\")
+SET(OBD_DEFAULT_SERIALPORT "/dev/cu.OBDKeyPro-DevB-1" CACHE STRING "Default serial port filename")
 
 SET(OBD_DEFAULT_DATABASE "./obdlogger.db" CACHE STRING "Default database filename for all obdgpslogger modules")
-ADD_DEFINITIONS(-DDEFAULT_DATABASE="\\"${OBD_DEFAULT_DATABASE}"\\")
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OBDLogger_SOURCE_DIR}/cmakemodules")
 
@@ -40,6 +38,9 @@ IF(ENABLE_GPSD)
 		MESSAGE(STATUS "Couldn't find libgps")
 	ENDIF(GPSD_FOUND)
 ENDIF(ENABLE_GPSD)
+
+CONFIGURE_FILE("${OBDLogger_SOURCE_DIR}/src/obdconfig.h.cmake" "${OBDLogger_BINARY_DIR}/obdconfig.h")
+INCLUDE_DIRECTORIES("${OBDLogger_BINARY_DIR}")
 
 SET(EXECUTABLE_OUTPUT_PATH "${OBDLogger_SOURCE_DIR}/bin")
 
