@@ -1,0 +1,8 @@
+#ifndef OBDCONFIG_H
+#define OBDCONFIG_H
+
+#cmakedefine OBD_DEFAULT_SERIALPORT "@OBD_DEFAULT_SERIALPORT@"
+#cmakedefine OBD_DEFAULT_DATABASE "@OBD_DEFAULT_DATABASE@"
+
+#endif // OBDCONFIG_H
+
