@@ -7,6 +7,7 @@ Version 0.5
  obdgpslogger,obdgui: Take out start/stop trip buttons
  obdgui: Set dial ranges based on real value ranges
  obdgpslogger: Do not disable the gps database functions
+ cmake: Create a configure.h file so string #defs will work with xcode
 
 Version 0.4 (released 2009-04-10)
  Add obdgui
